--- a/templates/kylehome.html
+++ b/templates/kylehome.html
@@ -53,7 +53,7 @@ body {
 	width: 0;
 	height: 0;
 	border-top: 25px solid transparent;
-	border-left: 50px solid #474e5d  ;
+	border-left: 50px solid #474e5d;
 	border-bottom: 25px solid transparent;
 	margin-left:50%;
 	position:relative;
@@ -82,13 +82,14 @@ border-left: 50px solid orange;
 
 /* Style the top navigation bar */
 .topnav {
+  overflow: hidden;
   background-color: #333;
 }
 
 /* Style the topnav links */
 .topnav a {
-
-  display:grid;
+  float: left;
+  display: block;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -209,6 +210,13 @@ border-left: 50px solid orange;
 }
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+@media screen and (max-width: 400px) {
+  .topnav a {
+    float: none;
+    width: 100%;
+  }
+}
+
 
 /* Image Gallery */
 
@@ -559,9 +567,19 @@ tr:nth-child(even){background-color:whitesmoke}
 }
 
 .dropdown:hover .dropdown-content {
-  color:#474e5d;
+  display: block;
 }
 
+@media screen and (max-width: 400px) {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+}
 
 .btmlink {
 color:orange;
@@ -576,6 +594,26 @@ background-color:#474e5d;
 }
 
 
+@media screen and (max-width:550px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
 
 /*### Smartphones (portrait and landscape)(small)### */
 @media screen and (min-width : 0px) and (max-width : 767px){
@@ -619,68 +657,6 @@ font-size:40px;
 
 
 }
-
-
-
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
 </style>
 </head>
 <body>
@@ -692,22 +668,21 @@ font-size:40px;
 
 <div class="topnav" id="myTopnav">
 
-
-<div class="navbar">
-  <a href="#home" style="float:right"><button class="sbt"> Register </button> </a>
-  <a href="#news" style="float:right"><button class="sbt"> Log in </button> </a>
-  <div class="dropdown" style="float:left"  >
-    <button class="dropbtn">Products
+  <a href="{{url_for("register")}}" style="float:right" > <i class="fa fa-sign-in" style="font-size:28px"></i> </a>
+  <a href="{{url_for("login")}}" style="float:right"> <i class="fa fa-user-circle-o" aria-hidden="true"></i> </a>
+   <a href="{{url_for("login")}}" style="float:right"> <i class="fa fa-shopping-cart" aria-hidden="true"></i> </a>
+  <div class="dropdown">
+    <button class="dropbtn">Animal Category
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-     <a href="#pork">Pig Section</a>
+      <a href="#pork">Pig Section</a>
       <a href="#chicken">Chicken Section </a>
       <a href="{{url_for("finisher")}}"> Beef & Sheep </a>
     </div>
   </div>
-</div>
-  </div>
+
+  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 
 <div class="row">
