--- a/templates/kylehome.html
+++ b/templates/kylehome.html
@@ -53,7 +53,7 @@ body {
 	width: 0;
 	height: 0;
 	border-top: 25px solid transparent;
-	border-left: 50px solid #474e5d;
+	border-left: 50px solid #474e5d  ;
 	border-bottom: 25px solid transparent;
 	margin-left:50%;
 	position:relative;
@@ -82,14 +82,13 @@ border-left: 50px solid orange;
 
 /* Style the top navigation bar */
 .topnav {
-  overflow: hidden;
   background-color: #333;
 }
 
 /* Style the topnav links */
 .topnav a {
-  float: left;
-  display: block;
+
+  display:grid;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -210,13 +209,6 @@ border-left: 50px solid orange;
 }
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
-  .topnav a {
-    float: none;
-    width: 100%;
-  }
-}
-
 
 /* Image Gallery */
 
@@ -513,7 +505,7 @@ tr:nth-child(even){background-color:whitesmoke}
 }
 
 .active {
-  background-color: #04AA6D;
+  background-color:dodgerblue;
   color: white;
 }
 
@@ -567,18 +559,19 @@ tr:nth-child(even){background-color:whitesmoke}
 }
 
 .dropdown:hover .dropdown-content {
-  display: block;
+  color:#474e5d;
 }
 
-@media screen and (max-width: 400px) {
-  .topnav a:not(:first-child), .dropdown .dropbtn {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
+.zshi{
+float:left;
+border-radius:10%;
+border:3px solid white ;
+}
 
+.porkwrap{
+float:right;
+border-radius:10%;
+border:3px solid white;
 }
 
 .btmlink {
@@ -594,26 +587,6 @@ background-color:#474e5d;
 }
 
 
-@media screen and (max-width:550px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .topnav.responsive .dropdown {float: none;}
-  .topnav.responsive .dropdown-content {position: relative;}
-  .topnav.responsive .dropdown .dropbtn {
-    display: block;
-    width: 100%;
-    text-align: left;
-  }
-}
 
 /*### Smartphones (portrait and landscape)(small)### */
 @media screen and (min-width : 0px) and (max-width : 767px){
@@ -657,6 +630,71 @@ font-size:40px;
 
 
 }
+
+
+
+.navbar {
+  overflow: hidden;
+  background-color:#474e5d;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color:orange;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color:orange;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color:inherit;
+  color:white;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #474e5d;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  color:white;
+}
+
+.dropdown-content a {
+  float: none;
+  color: orange;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color:darkgrey;
+  color:white;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 </style>
 </head>
 <body>
@@ -668,21 +706,23 @@ font-size:40px;
 
 <div class="topnav" id="myTopnav">
 
-  <a href="{{url_for("register")}}" style="float:right" > <i class="fa fa-sign-in" style="font-size:28px"></i> </a>
-  <a href="{{url_for("login")}}" style="float:right"> <i class="fa fa-user-circle-o" aria-hidden="true"></i> </a>
-   <a href="{{url_for("login")}}" style="float:right"> <i class="fa fa-shopping-cart" aria-hidden="true"></i> </a>
-  <div class="dropdown">
-    <button class="dropbtn">Animal Category
+
+<div class="navbar">
+  <a href="#home" style="float:right"><i class="fa fa-sign-in" style="font-size:28px"></i> Register  </a>
+  <a href="#news" style="float:right"><i class="fa fa-user-circle-o" aria-hidden="true"></i>Log in  </a>
+   <a href="{{url_for("order")}}" style="float:right"> <i class="fa fa-shopping-cart" aria-hidden="true"></i>Buy Products </a>
+  <div class="dropdown" style="float:left"  >
+    <button class="dropbtn">Products
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#pork">Pig Section</a>
+     <a href="#pork">Pig Section</a>
       <a href="#chicken">Chicken Section </a>
       <a href="{{url_for("finisher")}}"> Beef & Sheep </a>
     </div>
   </div>
-
-  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
+  </div>
 </div>
 
 <div class="row">
@@ -747,21 +787,16 @@ font-size:40px;
       </div>
       <div class="clearfix">
 
+
       <p class="shift">
-      <h3 style="text-align:center"> &nbsp &nbsp Chicken Information Block </h3>
-      <p>&nbsp &nbsp Kylenath Enterprises Offers You A Quick And Reliable Meat (Chicken) Supply  , </br> &nbsp &nbsp Retrieved From the Best chosen Animals  We are confident that youll love it .
+      <img class="zshi" src="{{url_for('static' , filename="chicken.gif")}}" style="height:280px; width:45% ;">&nbsp &nbsp Kylenath Enterprises Offers You A Quick And Reliable Meat (Chicken) Supply  , </br> &nbsp &nbsp Retrieved From the Best chosen Animals  We are confident that youll love it .&nbsp &nbsp In addition , Our Meat is also Health insured and bears the Regional Stamp Of Health Board And Regulations </br> &nbsp &nbsp  For More Info On this Product Click the link Below
+
       </p>
-      <p> &nbsp &nbsp In addition , Our Meat is also Health insured and bears the Regional Stamp Of Health Board And Regulations </br> &nbsp &nbsp  For More Info On this Product Click the link Below
-      </p>
-      <p>
-       <i id="magic" class="fa fa-shopping-cart"></i>
-       <i id="magic2" class="fa fa-info" ></i>
-      </br>
+     <i id="magic" class="fa fa-shopping-cart"></i>
+     <i id="magic2" class="fa fa-info" ></i>
       </br>
       </br>
 
-      </br>
-      </p>
 
     </div>
     </div>
@@ -803,24 +838,22 @@ font-size:40px;
       <div class="clearfix">
       </br>
       </br>
-
-      <h3> &nbsp &nbsp Pork Products </h3>
-      <p>&nbsp &nbsp We at {{ webtitle }}  also focus on Pork production at a large scale level ,&nbsp From Live Animal Sells To Desired Meat CHops We Got You Covered <br>  &nbsp &nbsp Currently Available Breeds Have Been Listed Below  </br>
+       <h3> &nbsp &nbsp Pork Products </h3>
+       <p>
+      <img class="porkwrap" src="{{url_for('static' , filename="piganime.gif")}}" style="height:280px; width:45% ;">&nbsp &nbsp We at {{ webtitle }}  also focus on Pork production at a large scale level ,&nbsp From Live Animal Sells To Desired Meat CHops We Got You Covered <br>  &nbsp &nbsp Currently Available Breeds Have Been Listed Below  </br>
       <ol>
       <li> Large Duroc White </li>
       <li> Berkshire </li>
       <li> Other Breed (On Demand) </li>
       </ol>
-      </p>
-      <p> &nbsp &nbsp </br> &nbsp &nbsp  Make An Order ?  For More Info On this Product Click the link Below !</p>
+    Make An Order ?  For More Info On this Product Click the link Below !
       <p>
-      <i id="magic" class="fa fa-shopping-cart"></i>
-     <i id="magic2" class="fa fa-info" ></i>
+      <i id="magic" class="fa fa-shopping-cart"><a href="{{url_for("order")}}" > </a> </i>
+     <i id="magic"  class="fa fa-info"  ></i>
      </br>
      </p>
-      </br>
-      </br>
-      <h3 class="stylock" style="text-align:center ; color:orange "> <b> Select Other  Products </b> </h3>
+     </br>
+      <h3 class="stylock" style="text-align:center ; color:orange "> <b> Next Page </b> </h3>
       <a href="{{url_for('finisher')}}" > <div class="tri"></div> </a>
       </br>
       </br>
@@ -832,6 +865,7 @@ font-size:40px;
 
 
   <div class="rightcolumn">
+
     <div class="card" style="background-color:#f1f1f1" >
       <h2><marquee direction="up"  >Kylenath Enterprises </marquee></h2>
       <div class="fakeimg" style="height:auto;">
@@ -906,10 +940,15 @@ font-size:40px;
 <div class="footer">
 <div class="overfooter">
 <p style="color:white ; font-size:20px ; text-align:center; color:orange;"  <b> <marquee> KYLENATH ENTERPRISES </marquee> </b> </p>
+<a class="btmlink" href="{{url_for("finisher")}}" style="float:left; margin-left:30px ;" > Product Pricing </a></br>
+<a class="btmlink" href="{{url_for("finisher")}}" style="float:left; margin-left:30px ;" > About Us </a></br>
+<a class="btmlink" href="{{url_for("finisher")}}" style="float:left; margin-left:30px ;" > Farm Locations </a></br>
 <a class="btmlink" href="#pork" style="float:right; margin-right:30px ;" > Pig </a></br>
 <a class="btmlink" href="#chicken" style="float:right; margin-right:30px ;" > Chicken </a></br>
 <a class="btmlink" href="{{url_for("finisher")}}" style="float:right; margin-right:30px ;" > Beef </a></br>
 <a class="btmlink" href="{{url_for("finisher")}}" style="float:right; margin-right:30px ;" > Sheep </a></br>
+
+
 
 
 
