--- a/templates/kylehome.html
+++ b/templates/kylehome.html
@@ -712,8 +712,8 @@ font-size:40px;
       &nbsp &nbsp Kylenath Enterprises Offers You A Quick And Reliable Meat (Chicken) Supply  , </br> &nbsp &nbsp Retrieved From the Best chosen Animals  We are confident that youll love it .&nbsp &nbsp  </br> In addition , Our Meat is also Health insured and bears the Regional Stamp Of Health Board And Regulations </br> &nbsp &nbsp  For More Info On this Product Click the link Below
       </b>
 
-          <i id="magic" class="fa fa-shopping-cart"></i>
-     <i id="magic2" class="fa fa-info" ></i>
+          <i id="magic" class="fa fa-shopping-cart"><a href="{{url_for("order")}}" > </a></i>
+     <i id="magic2" class="fa fa-info" ><a href="{{url_for("identity")}}" > </a></i>
       </br>
        </br>
       </br>
@@ -781,7 +781,7 @@ font-size:40px;
     Make An Order ?  For More Info On this Product Click the link Below !
       <p>
       <i id="magic" class="fa fa-shopping-cart"><a href="{{url_for("order")}}" > </a> </i>
-     <i id="magic"  class="fa fa-info"  ></i>
+     <i id="magic"  class="fa fa-info"  ><a href="{{url_for("identity")}}" > </a></i>
 
     </div>
       <div class="fakeimg" style="overflow:scroll">
