--- a/templates/kylehome.html
+++ b/templates/kylehome.html
@@ -781,7 +781,7 @@ font-size:40px;
     Make An Order ?  For More Info On this Product Click the link Below !
       <p>
       <i id="magic" class="fa fa-shopping-cart"><a href="{{url_for("order")}}" > </a> </i>
-     <i id="magic"  class="fa fa-info"  ><a href="{{url_for("identity")}}" > </a></i>
+     <i id="magic2"  class="fa fa-info" ><a href="{{url_for("identity")}}" > </a></i>
 
     </div>
       <div class="fakeimg" style="overflow:scroll">
