--- a/templates/kylehome.html
+++ b/templates/kylehome.html
@@ -840,27 +840,27 @@ font-size:40px;
     <div class="card" style="font-size:50px; background-color:whitesmoke; color:orange;">
     <h3 class="aboutplay" style="text-align:center ; color:orange; font-size:15px"> Quick Links </h3>
      <a href="{{url_for("finisher")}}">
-      <img class="iconics" src="https://img.icons8.com/ios-glyphs/30/000000/bull.png" style="color:orange;" />
+      <img class="iconics" src=""{{url_for('static', filename='icon1.jpg')}}"" />
     </a>
       </br>
       </br>
       </br>
       <a href="#chicken" style="color:#474e5d; color:#474e5d;" >
-      <img class="iconics" src="https://img.icons8.com/metro/30/000000/chicken.png"/>
+      <img class="iconics" src="{{url_for('static', filename='icon2.jpeg')}}"/>
     </a>
       </br>
       </br>
       </br>
 
        <a href="{{url_for("finisher")}}" style="text-decoration:none ; color:#474e5d;">
-      <img class="iconics" src="https://img.icons8.com/ios-filled/50/000000/sheep2.png" />
+      <img class="iconics" src="{{url_for('static', filename='icon3.gif')}}"/>
       </a>
       </a>
       </br>
       </br>
       </br>
         <a href="#pork" style="color:#474e5d;">
-      <img class="iconics"  src="https://img.icons8.com/android/50/000000/pig.png"  />
+      <img class="iconics"  src="{{url_for('static', filename='icon4.jpg')}}"  />
     </a>
       </br>
       </br>
