--- a/templates/kylehome.html
+++ b/templates/kylehome.html
@@ -840,7 +840,7 @@ font-size:40px;
     <div class="card" style="font-size:50px; background-color:whitesmoke; color:orange;">
     <h3 class="aboutplay" style="text-align:center ; color:orange; font-size:15px"> Quick Links </h3>
      <a href="{{url_for("finisher")}}">
-      <img class="iconics" src=""{{url_for('static', filename='icon1.jpg')}}"" />
+      <img class="iconics" src="{{url_for('static', filename='icon1.jpg')}}" />
     </a>
       </br>
       </br>
