--- a/templates/kylehome.html
+++ b/templates/kylehome.html
@@ -859,7 +859,7 @@ font-size:40px;
       </br>
       </br>
         <a href="#pork" style="color:#474e5d;">
-      <img class="iconics"  src="{{url_for('static', filename='icon4.jpg')}}"  />
+      <img class="iconics"  src="{{url_for('static', filename='icon4.gif')}}"  />
     </a>
       </br>
       </br>
