--- a/templates/kylehome.html
+++ b/templates/kylehome.html
@@ -563,7 +563,7 @@ background-color:#474e5d;
   height: 100px;
   background-color: red;
   position: relative;
-  animation: myfirst 5s linear 2s infinite alternate;
+  background-image:url({{url_for('static' , filename='banim.gif')}});
   overflow:hidden;
 }
 
@@ -661,7 +661,7 @@ font-size:40px;
 </head>
 <body>
 
-<div class="header">
+<div class="header" style=" background-size:100% 100%; background-repeat:no-repeat; background-attachment:fixed; height:450px">
 
 <h3> KYLENATH ENTERPRISES </h3>
 </div>
@@ -839,13 +839,13 @@ font-size:40px;
     <div class="card" style="font-size:50px; background-color:whitesmoke; color:orange;">
     <h3 class="aboutplay" style="text-align:center ; color:orange; font-size:15px"> Quick Links </h3>
      <a href="{{url_for("finisher")}}">
-      <img class="iconics" src="{{url_for('static', filename='icon1.jpg')}}" />
+      <img class="iconics" src="{{url_for('static', filename='icon1.gif')}}" />
     </a>
       </br>
       </br>
       </br>
       <a href="#chicken" style="color:#474e5d; color:#474e5d;" >
-      <img class="iconics" src="{{url_for('static', filename='icon2.jpeg')}}"/>
+      <img class="iconics" src="{{url_for('static', filename='icon2.gif')}}"/>
     </a>
       </br>
       </br>
