--- a/templates/kylehome.html
+++ b/templates/kylehome.html
@@ -559,7 +559,7 @@ background-color:#474e5d;
 
 
 .header{
-  width:100%;
+  width:fit;
   background-color: red;
   position: relative;
   background-image:url({{url_for('static' , filename='banim.gif')}});
