--- a/templates/admin.html
+++ b/templates/admin.html
@@ -213,15 +213,15 @@ color:black;
 <div class="price">
 <h3 style="font-size:20px" > Kylenath Price Tuning </h3>
 </div>
-<form class="form-inline" action="{{url_for("home")}}" , method='POST'>
-  <label for="email">Pig</label>
+<form action="{{url_for("pricing")}}" method="POST">
+  <label for="pig">Pig</label>
   <input type="number" id="email" placeholder="Enter Pig Price" name="pig">
-  <label for="pwd">Chicken:</label>
+  <label for="chicken">Chicken:</label>
   <input type="number" id="pwd" placeholder="Enter Chicken Price" name="chicken">
-   <label for="pwd">Sheep:</label>
+   <label for="sheep">Sheep:</label>
   <input type="number" id="pwd" placeholder="Enter Sheep Price" name="sheep">
-   <label for="pwd">Beef:</label>
-     <input type="number" id="pwd" placeholder="Enter Beef Price " name="Beef">
+   <label for="beef">Beef:</label>
+     <input type="number" id="pwd" placeholder="Enter Beef Price " name="beef">
   <button type="submit">Submit</button>
 
 </form>
