--- a/templates/admin.html
+++ b/templates/admin.html
@@ -213,17 +213,22 @@ color:black;
 <div class="price">
 <h3 style="font-size:20px" > Kylenath Price Tuning </h3>
 </div>
-<form action="{{url_for("pricing")}}" method="POST">
+<form action="{{url_for("pig_price")}}" method="POST">
   <label for="pig">Pig</label>
   <input type="number" id="email" placeholder="Enter Pig Price" name="pig">
+ </form>  
+  <form action="{{url_for("chicken_price")}}" method="POST">                                                                        
   <label for="chicken">Chicken:</label>
   <input type="number" id="pwd" placeholder="Enter Chicken Price" name="chicken">
+  </form>    
+   <form action="{{url_for("sheep_price")}}" method="POST">                                                                             
    <label for="sheep">Sheep:</label>
   <input type="number" id="pwd" placeholder="Enter Sheep Price" name="sheep">
+ </form>    
+ <form action="{{url_for("beef_price")}}" method="POST">
    <label for="beef">Beef:</label>
      <input type="number" id="pwd" placeholder="Enter Beef Price " name="beef">
   <button type="submit">Submit</button>
-
 </form>
 
 <div class="admin">
