--- a/templates/admin.html
+++ b/templates/admin.html
@@ -215,20 +215,23 @@ color:black;
 </div>
 <form action="{{url_for("pig_price")}}" method="POST">
   <label for="pig">Pig</label>
-  <input type="number" id="email" placeholder="Enter Pig Price" name="pig">
+  <input style="height:17px ; width:20% ; border:2px solid dodgerblue " type="number" id="email" placeholder="Enter Pig Price" name="pig">
+  <input  class="sbt" type="submit">
  </form>  
   <form action="{{url_for("chicken_price")}}" method="POST">                                                                        
   <label for="chicken">Chicken:</label>
-  <input type="number" id="pwd" placeholder="Enter Chicken Price" name="chicken">
+  <input style="height:17px ; width:20% ; border:2px solid dodgerblue " type="number" id="pwd" placeholder="Enter Chicken Price" name="chicken">
+   <input  class="sbt" type="submit">                                                                             
   </form>    
    <form action="{{url_for("sheep_price")}}" method="POST">                                                                             
    <label for="sheep">Sheep:</label>
-  <input type="number" id="pwd" placeholder="Enter Sheep Price" name="sheep">
+  <input style="height:17px ; width:20% ; border:2px solid dodgerblue " type="number" id="pwd" placeholder="Enter Sheep Price" name="sheep">
+  <input  class="sbt" type="submit">                                                                          
  </form>    
  <form action="{{url_for("beef_price")}}" method="POST">
    <label for="beef">Beef:</label>
-     <input type="number" id="pwd" placeholder="Enter Beef Price " name="beef">
-  <button type="submit">Submit</button>
+     <input style="height:17px ; width:20% ; border:2px solid dodgerblue " type="number" id="pwd" placeholder="Enter Beef Price " name="beef">
+  <input  class="sbt" type="submit">
 </form>
 
 <div class="admin">
