--- a/templates/orderform.html
+++ b/templates/orderform.html
@@ -148,6 +148,12 @@ text-align:center ;
 font-size:20px;
 }
 
+#scaleout{
+height:20px ;
+width:100% ;
+color:black;
+background-color:#80ced6;
+}
 
 </style>
 </head>
@@ -183,7 +189,7 @@ font-size:20px;
                 <button class="buttonload">
                 <i class="fa fa-spinner fa-spin"></i>Pay Now
                 </button>
-
+                                <p style="color:orange">Unit Price : <span id="scaleout"></span></p>
               </div>
           </div>
 
@@ -205,7 +211,7 @@ font-size:20px;
             </select>
 
             <label for="ccnum">Quantity</label>
-            <input type="number" id="ccnum" name="quantity" placeholder="Units are Measured In Kilograms">
+            <input type="number" id="ccnum" name="quantity" placeholder="Units are Measured In Kilograms" oninput="weightConverter(this.value)" onchange="weightConverter(this.value)">>
 
             <div class="row">
               <div class="col-50">
@@ -238,15 +244,18 @@ font-size:20px;
   <div class="col-25">
     <div class="container">
       <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>4</b></span></h4>
-      <p><a href="#">Product 1</a> <span class="price">$15</span></p>
-      <p><a href="#">Product 2</a> <span class="price">$5</span></p>
-      <p><a href="#">Product 3</a> <span class="price">$8</span></p>
-      <p><a href="#">Product 4</a> <span class="price">$2</span></p>
+      <p><a href="#">Product 1</a> <span class="price"></span></p>
+  
       <hr>
-      <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
+      <p>Total <span class="price" style="color:black"><b> </b></span></p>
     </div>
   </div>
 </div>
 
 </body>
+<script>
+function weightConverter(valNum) {
+  document.getElementById("scaleout").innerHTML=valNum*400 + "/=";
+}
+</script>
 </html>
