--- a/templates/orderform.html
+++ b/templates/orderform.html
@@ -189,7 +189,7 @@ background-color:#80ced6;
                 <button class="buttonload">
                 <i class="fa fa-spinner fa-spin"></i>Pay Now
                 </button>
-                                <p style="color:orange">Unit Price : <span id="scaleout"></span></p>
+                <p style="color:orange">TOTAL AMOUNT : <span id="scaleout"></span></p>
               </div>
           </div>
 
@@ -211,8 +211,7 @@ background-color:#80ced6;
             </select>
 
             <label for="ccnum">Quantity</label>
-            <input type="number" id="ccnum" name="quantity" placeholder="Units are Measured In Kilograms" oninput="weightConverter(this.value)" onchange="weightConverter(this.value)">>
-
+            <input type="number" id="ccnum" name="quantity" placeholder="Units are Measured In Kilograms" oninput="weightConverter(this.value)" onchange="weightConverter(this.value)">
             <div class="row">
               <div class="col-50">
                 <label for="expyear"> Live Animal </label>
