--- a/templates/orderform.html
+++ b/templates/orderform.html
@@ -189,7 +189,7 @@ background-color:#80ced6;
                 <button class="buttonload">
                 <i class="fa fa-spinner fa-spin"></i>Pay Now
                 </button>
-                <p style="color:orange">TOTAL AMOUNT : <span id="scaleout"></span></p>
+                <p style="color:orange; text-align:center; ">TOTAL AMOUNT : <span id="scaleout"></span></p>
               </div>
           </div>
 
