--- a/templates/orderform.html
+++ b/templates/orderform.html
@@ -159,7 +159,7 @@ background-color:#80ced6;
 </head>
 <body>
 
-<h2>KYLENATH ENTERPRISE ORDER PROCESSING </h2>
+<h2 style="color:dodgerblue; text-align:center">KYLENATH ENTERPRISE ORDER PROCESSING </h2>
 
 <div class="row">
   <div class="col-75">
