--- a/templates/mailorder.html
+++ b/templates/mailorder.html
@@ -6,7 +6,7 @@
     <head>
     <style>
     .boxorder{
-    background-color:#4745ed;
+    background-color:#474e5d;
     height:auto;
     width:100% ;
     color:white;
@@ -50,7 +50,7 @@
 
     .fin{
     color:orange;
-    background-color:#4745ed;
+    background-color:#474e5d;
     width:100%;
     padding:3px;
     }
