--- a/templates/signcnf.html
+++ b/templates/signcnf.html
@@ -8,7 +8,7 @@
 
 
     .embody{
-    background-color:#4745ed;
+    background-color:#474e5d;
     height:fit;
     width:100% ;
     color:white;
@@ -27,7 +27,7 @@
     .id{
     background-color:white;
     color:dodgerblue;
-    border:2px solid dodgerblue ;
+    border:2px solid #474e5d ;
     height:30px;
     width:30%;
 
