--- a/templates/kylehome.html
+++ b/templates/kylehome.html
@@ -662,7 +662,7 @@ font-size:40px;
 
 <div class="header" style=" background-size:100% 100%; background-repeat:no-repeat; background-attachment:fixed; height:450px">
 
-<h3> KYLENATH ENTERPRISES </h3>
+<h1 style="color:white; "> KYLENATH ENTERPRISES </h1>
 </div>
 
 <div class="topnav" id="myTopnav">
