--- a/templates/kylehome.html
+++ b/templates/kylehome.html
@@ -707,9 +707,19 @@ font-size:40px;
        <img class="zshi" src="{{url_for('static' , filename="chicken.gif")}}" style="height:280px;">
 
        <p style="background-color:white; color:#474e5d ; font-size:18px">
-      &nbsp &nbsp Kylenath Enterprises Offers You A Quick And Reliable Meat (Chicken) Supply  , </br> &nbsp &nbsp Retrieved From the Best chosen Animals  We are confident that youll love it .&nbsp &nbsp  </br> In addition , Our Meat is also Health insured and bears the Regional Stamp Of Health Board And Regulations </br> &nbsp &nbsp  For More Info On this Product Click the link Below
+      &nbsp &nbsp Kylenath Enterprises Offers You A Quick And Reliable Meat (Chicken) Supply  , 
+    </br> &nbsp &nbsp Retrieved From the Best chosen Animals  We are confident that youll love it .&nbsp &nbsp  </br>
+	In addition , Our Meat is also Health insured and bears the Regional Stamp Of Health Board And Regulations </br>
+&nbsp &nbsp  
       </b>
-
+        <h5 class="stylock" >CHICKEN BREEDS  </h5>
+ 	<ol  class="stylock" style="font-size:18px; text-align:left"><b>
+      <li> Kienyeji --<i> Traditional Chicken </i> -- </li>
+      <li> Improved Kienyeji --<i> Interlocal Chicken </i> --</li>
+      </b>
+      </ol>
+</p>
+<p style="background-color:white; color:#474e5d ; font-size:18px">
           <i id="magic" class="fa fa-shopping-cart"><a href="{{url_for("order")}}" > </a></i>
      <i id="magic2" class="fa fa-info" ><a href="{{url_for("identity")}}" > </a></i>
       </br>
@@ -719,21 +729,11 @@ font-size:40px;
       </p>
 
 
-    </div>
-    <div style="background-color:white">
-      <h5 class="stylock" >CHICKEN BREEDS  </h5>
 
-      <ol  class="stylock" style="font-size:18px; text-align:left"><b>
-      <li> Kienyeji --<i> Traditional Chicken </i> -- </li>
-      <li> Improved Kienyeji --<i> Interlocal Chicken </i> --</li>
-      </b>
-      </ol>
-        <h5 class="stylock"> <b> CHICKEN PRODUCTS </b> </h5>
-        </div>
     <div style="overflow-x:auto;">
     </div>
       <div class="fakeimg" style="overflow:scroll">
-
+      <h5 class="stylock"> <b> CHICKEN PRODUCTS </b> </h5>
      <div class="container">
   {% for image_name in image_name %}
   <div class="mySlides">
